--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:text="Bienvenido"
         android:textSize="35dp"
-        android:textColor="@color/black"
+        android:textColor="#1976D2"
         app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintVertical_bias="0.176" />
 
