--- a/app/src/main/res/layout/activity_acercade.xml
+++ b/app/src/main/res/layout/activity_acercade.xml
@@ -1,63 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
- <FrameLayout
+ <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AcercaDeActivity">
+        android:fillViewport="true">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".AcercaDeActivity">
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/cuadrado_corners"
+        android:clickable="true"
+        android:elevation="20dp"
+        android:focusable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/item_name3"
+            android:layout_width="200dp"
+            android:layout_height="160dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/t_3"
+            android:foregroundGravity="center_vertical"
+            android:scaleType="centerCrop" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@id/item_name3"
+            android:background="@color/white">
 
-         <RelativeLayout
-             android:layout_width="match_parent"
-             android:layout_height="400dp"
-             android:background="@drawable/puerquito2">
-
-             <TextView
-                 android:id="@+id/marranito2"
-                 android:layout_width="100dp"
-                 android:layout_height="wrap_content"
-                 android:layout_alignParentStart="true"
-                 android:layout_alignParentEnd="true"
-                 android:layout_marginStart="55dp"
-                 android:layout_marginTop="270dp"
-                 android:layout_marginEnd="55dp"
-                 android:layout_marginBottom="360dp"
-                 android:text="Recomendaciones"
-                 android:textColor="#1976D2"
-                 android:textSize="30dp"
-                 android:textStyle="bold" />
-
-             <LinearLayout
-                 android:id="@+id/search"
-                 android:layout_width="match_parent"
-                 android:layout_height="50dp"
-                 android:layout_marginStart="25dp"
-                 android:layout_marginTop="125dp"
-                 android:layout_marginEnd="25dp"
-                 android:layout_marginBottom="20dp"
-                 android:background="@drawable/barra"
-                 android:elevation="50dp"
-                 android:gravity="center_vertical"
-                 android:orientation="vertical">
-
-             </LinearLayout>
-
-             <androidx.recyclerview.widget.RecyclerView
-                 android:id="@+id/recycler_view"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 android:layout_below="@id/search" />
-
-
-         </RelativeLayout>
-
+            <TextView
+                android:id="@+id/item_textName3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/mi_texto"
+                android:textColor="#1976D2"
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
+    </RelativeLayout>
 
-</FrameLayout>
+    <RelativeLayout
+        android:id="@+id/relativeLayout3"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/cuadrado_corners"
+        android:clickable="true"
+        android:elevation="20dp"
+        android:focusable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">
+
+        <ImageView
+            android:id="@+id/item_name33"
+            android:layout_width="200dp"
+            android:layout_height="160dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/t_2"
+            android:foregroundGravity="center_vertical"
+            android:scaleType="centerCrop" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/item_name33"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/item_textName33"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/tip2"
+                android:textColor="#1976D2"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+
+        android:layout_marginTop="20dp"
+        android:background="@drawable/cuadrado_corners"
+        android:clickable="true"
+        android:elevation="20dp"
+        android:focusable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
+        tools:ignore="MissingConstraints">
+
+        <ImageView
+            android:id="@+id/item_name2"
+            android:layout_width="200dp"
+            android:layout_height="160dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/t_1"
+            android:foregroundGravity="center_vertical"
+            android:scaleType="centerCrop" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/item_name2"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/item_textName2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:gravity="center"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:text="@string/tip1"
+                android:textColor="#1976D2"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
