--- a/app/src/main/res/layout/activity_acercade.xml
+++ b/app/src/main/res/layout/activity_acercade.xml
@@ -50,8 +50,7 @@
                  android:id="@+id/recycler_view"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 android:layout_below="@id/search"
-                 android:scrollbars="vertical" />
+                 android:layout_below="@id/search" />
 
 
          </RelativeLayout>
