--- a/app/src/main/res/layout/activity_acercade.xml
+++ b/app/src/main/res/layout/activity_acercade.xml
@@ -69,10 +69,12 @@
         android:clickable="true"
         android:elevation="20dp"
         android:focusable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
+        app:layout_constraintVertical_bias="0.16">
 
         <ImageView
             android:id="@+id/item_name33"
@@ -93,10 +95,11 @@
             android:background="@color/white">
 
             <TextView
-                android:id="@+id/item_textName33"
+                android:id="@+id/item_txtTip2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:clickable="true"
                 android:gravity="center"
                 android:maxLines="1"
                 android:singleLine="true"
