--- a/app/src/main/res/layout/activity_acercade.xml
+++ b/app/src/main/res/layout/activity_acercade.xml
@@ -147,7 +147,7 @@
             android:background="@color/white">
 
             <TextView
-                android:id="@+id/item_textName2"
+                android:id="@+id/item_txtTip1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
