--- a/app/src/main/res/layout/activity_historial2.xml
+++ b/app/src/main/res/layout/activity_historial2.xml
@@ -6,10 +6,26 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/p_h"
+        android:clickable="true"
+        android:elevation="20dp"
+        android:focusable="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/cuadrado_corners"
         android:clickable="true"
         android:elevation="20dp"
@@ -24,8 +40,8 @@
             android:layout_height="wrap_content"
             android:theme="@style/SearchView"
             app:iconifiedByDefault="true"
-            app:queryHint="Search"
-            app:queryBackground="@android:color/transparent" />
+            app:queryBackground="@android:color/transparent"
+            app:queryHint="Search" />
 
     </RelativeLayout>
 
