--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -42,13 +42,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.SearchView
+            <Spinner
+                android:id="@+id/spiner_historial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/SearchView"
-                app:iconifiedByDefault="true"
-                app:queryBackground="@android:color/transparent"
-                app:queryHint="Search" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp" />
 
         </RelativeLayout>
 
