--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -1,109 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ConfiguracionActivity">
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/pie"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/spiner"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="280dp" />
-
-        <TextView
-            android:id="@+id/text_click"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/spiner"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="60dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="30dp"
-            android:clickable="true"
-            android:text="+ Lista de egresos"
-            android:textColor="#1976D2"
-            android:textSize="30dp"
-            android:textStyle="bold" />
-
-        <Spinner
-            android:id="@+id/spiner"
-            android:layout_width="145dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="55dp"
-            android:layout_marginLeft="82dp"
-            android:layout_marginEnd="160dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="170dp"
-            android:max="200"
-            android:paddingBottom="12dp"
-            android:textSize="8sp"
-            android:textStyle="bold"
-            android:visibility="invisible" />
-
-        <TextView
-            android:id="@+id/text_click_otros"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="63dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="130dp"
-            android:clickable="true"
-            android:text="+ Otros"
-            android:textColor="#1976D2"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:visibility="invisible" />
-
-        <EditText
-            android:id="@+id/edtNumberCantidad"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="210dp"
-            android:layout_marginBottom="170dp"
-            android:ems="20"
-            android:hint="@string/edt_cantidad"
-            android:textAlignment="center"
-            android:inputType="number"
-            android:visibility="invisible" />
-
-
-        <EditText
-            android:id="@+id/edtAgregarOt"
-            android:layout_width="145dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="55dp"
-            android:layout_marginBottom="80dp"
-            android:inputType="textCapSentences|textAutoCorrect"
-            android:hint="@string/edt_agregar"
-            android:visibility="invisible" />
-
-        <Button
-            android:id="@+id/btn_agregar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="100dp"
-            android:layout_marginEnd="100dp"
-            android:layout_marginBottom="20dp"
-            android:text="Agregar"
-            android:visibility="invisible" />
-
-
-</RelativeLayout>
-
+</androidx.constraintlayout.widget.ConstraintLayout>
