--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,10 +9,17 @@
         android:orderInCategory="100">
 
         <menu>
-                <item
+
+            <item
                 android:id="@+id/btn_config"
                 android:icon="@drawable/ic_baseline_settings_24"
                 android:title="@string/btn_configuracion"
+                android:orderInCategory="100"
+                />
+                <item
+                android:id="@+id/btn_resumen"
+                android:icon="@drawable/ic_baseline_featured_play_list_24"
+                android:title="@string/btn_resumen"
                 android:orderInCategory="100"
                 />
                 <item
