--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -15,8 +15,8 @@
 
         <RelativeLayout
             android:id="@+id/relativeLayout"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/p_config"
             android:elevation="20dp"
@@ -30,13 +30,14 @@
 
 
         <TextView
+            android:id="@+id/textView3"
             android:layout_width="300dp"
             android:layout_height="45dp"
             android:layout_marginTop="20dp"
             android:elevation="20dp"
-            android:textSize="18dp"
-            android:textAlignment="center"
             android:text="@string/txtVConf1"
+            android:textAlignment="center"
+            android:textSize="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
@@ -47,8 +48,7 @@
             android:id="@+id/relativeLayout2"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_marginTop="180dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/cuadrado_corners"
             android:clickable="true"
             android:elevation="20dp"
@@ -56,7 +56,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/textView3">
 
             <Spinner
                 android:id="@+id/spiner_frecuencia"
@@ -64,12 +64,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginTop="3dp"
-                android:layout_marginBottom="3dp" />
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="1dp" />
 
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="300dp"
             android:layout_height="35dp"
             android:layout_marginTop="20dp"
@@ -77,12 +78,11 @@
             android:text="@string/txtVConf2"
             android:textAlignment="center"
             android:textSize="18dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintVertical_bias="0.151">
 
         </TextView>
 
@@ -90,18 +90,16 @@
             android:id="@+id/relativeLayout3"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_marginTop="290dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/cuadrado_corners"
             android:clickable="true"
             android:elevation="20dp"
             android:focusable="true"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/textView4">
 
             <Spinner
                 android:id="@+id/spiner_periodo"
@@ -113,6 +111,56 @@
                 android:layout_marginBottom="3dp" />
 
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/txt_monto"
+            android:layout_width="300dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="20dp"
+            android:elevation="20dp"
+            android:text="@string/txtVConf3"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
+            app:layout_constraintVertical_bias="0.0">
+
+        </TextView>
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:hint="@string/edt_cantidad"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textSize="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_monto"
+            app:layout_constraintVertical_bias="0.0">
+
+        </EditText>
+
+        <Button
+            android:id="@+id/btn_add_ingresos"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:text="Agregar"
+            android:textSize="15dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
