--- a/app/src/main/res/values/periodo_semanal.xml
+++ b/app/src/main/res/values/periodo_semanal.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="lista_periodo_semanal">¿Cual es el periodo?
-    <item>De lunes a domingo.</item>
+    <item>Lunes</item>
+    <item>Martes</item>
+    <item>Miercoles</item>
+    <item>Jueves</item>
+    <item>Viernes</item>
+    <item>Sabado</item>
+    <item>Domingo</item>
     </string-array>
 </resources>
